@@ -166,7 +166,7 @@ public class CPanel extends JPanel
 		if (level == 0)
 			putClientProperty(AdempiereLookAndFeel.TABLEVEL, null);
 		else
-			putClientProperty(AdempiereLookAndFeel.TABLEVEL, new Integer(level));
+			putClientProperty(AdempiereLookAndFeel.TABLEVEL, Integer.valueOf(level));
 	}   //  setTabLevel
 
 	/**
