@@ -350,7 +350,7 @@ public class ArchiveBL implements IArchiveBL
 		}
 		else
 		{
-			return Optional.of(lastArchives.get(0));
+			return Optional.of(lastArchives.getFirst());
 		}
 	}
 
