@@ -85,7 +85,7 @@ public class LicenseFeeAlgorithmTest
 		//then
 		assertThat(commissionShare.size()).isEqualTo(1);
 
-		expect.serializer("orderedJson").toMatchSnapshot(commissionShare.get(0));
+		expect.serializer("orderedJson").toMatchSnapshot(commissionShare.getFirst());
 	}
 
 	@Test
