@@ -99,13 +99,13 @@ public class JoinWeightAttributePropagationTest extends AbstractWeightAttributeT
 		//
 		// check out the HU which we just joined
 		Assert.assertEquals("Invalid amount of remaining TUs after join", 1, splitTradingUnits.size());
-		final I_M_HU splitTU1 = splitTradingUnits.get(0);
+		final I_M_HU splitTU1 = splitTradingUnits.getFirst();
 		final IAttributeStorage attributeStorageTU1 = attributeStorageFactory.getAttributeStorage(splitTU1);
 		assertSingleHandlingUnitWeights(attributeStorageTU1, newHUWeightsExpectation("8.765", "7.765", "1", "0"));
 
 		//
 		// Simulate - take off one of the TUKeys to bind it to the new LU
-		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.remove(0);
+		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.removeFirst();
 
 		// join another 1x10kg
 		helper.joinHUs(huContext, loadingUnit, tradingUnitToJoin2);
@@ -153,7 +153,7 @@ public class JoinWeightAttributePropagationTest extends AbstractWeightAttributeT
 		//
 		// Simulate - take off one of the TUKeys to bind it to the new LU
 		final I_M_HU tradingUnitToJoin1 = splitTradingUnits.remove(1);
-		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.remove(0);
+		final I_M_HU tradingUnitToJoin2 = splitTradingUnits.removeFirst();
 
 		helper.joinHUs(huContext, loadingUnit, tradingUnitToJoin1, tradingUnitToJoin2);
 
@@ -198,7 +198,7 @@ public class JoinWeightAttributePropagationTest extends AbstractWeightAttributeT
 				BigDecimal.ONE); // split on ONE additional LU
 
 		assertThat("Invalid amount of LUs were split", splitLUs.size(), is(1));
-		final I_M_HU splitLU = splitLUs.get(0);
+		final I_M_HU splitLU = splitLUs.getFirst();
 		// helper.commitAndDumpHU(splitLU);
 
 		assertLoadingUnitStorageWeights(splitLU, huItemIFCO_10, 2,
@@ -259,7 +259,7 @@ public class JoinWeightAttributePropagationTest extends AbstractWeightAttributeT
 
 		//
 		// Source LU
-		final I_M_HU sourceLU = splitLUs.get(0);
+		final I_M_HU sourceLU = splitLUs.getFirst();
 		Assert.assertTrue("The target LU we just split to shall be a top-level handling unit", sourceLU.getM_HU_Item_Parent_ID() <= 0);
 
 		final I_M_HU sourceTradingUnitWith10 = findTUInLUWithQty(sourceLU, 10); // find a TU with 10 x CU
